# planet

./: .gitignore  git.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: deply-sphinx.yml
ai-docs/: cpp_note.md  浮点数.md
ai-envs/: Pytorch envs build.md
ai-envs-docker/: README.md
ai-envs-docker/env-testing/: Dockerfile
ai-envs-docker/env0-from-pytorch-21.10-py3/: Dockerfile  README.md  build.sh
ai-envs-docker/env1-pytorch-21.10/: README.md
ai-envs-docker/env1-pytorch-audio/: Pytorch envs build.md
ai-envs-docker/env3-trt8.4.3-cu114/: Dockerfile  build.sh
ai-envs/env1-pytorch-21.10/: Dockerfile
ai-envs/env2-trt8.2.5-cu102/: Dockerfile  build.sh
ai-envs/env3-trt8.4.3-cu114/: Dockerfile
ai-examples/: README.md
codelib/config/: config.json  config.toml  load_config.py
codelib/docker/: run.sh  trt8.5.1-cu10.2-ubuntu1804.Dockerfile  trt8.5.1-cu11.3-ubuntu2004.Dockerfile
codelib/docker/nvidia-pytorch/: Dockerfile
codelib/docker/pytorch-pytorch/: Dockerfile  build.sh
codelib/docker/tensorrt8-ubuntu18/: README.md  build.sh  requirements.txt  run.sh  (+2 more)
config/cfg/: config.py
docs/: conf.py  git.md  index.md  linux 常用命令.md
docs/datasets/: index.md
docs/python/: index.md
envs/: Pytorch envs build.md  launch.sh
envs/build-from-nvcr.io/: Dockerfile  README.md  build.sh
envs/env0-from-pytorch-21.10-py3/: Dockerfile  README.md
envs/env1-pytorch-21.10/: README.md
envs/env4-trt8.4.3-shell/: README.md  build_in_container.sh
envs/trt8.4.3-cu11.n-ubuntu2004/: Dockerfile
python_selium/: download_pdf.py
set_logs/: set_logs.py
(+7 files in other folders)
