[build-system]
requires = ["sphinx-theme-builder >= 0.2.0a10"]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "16.15.1"

[project]
name = "planet"
description = "collection of ai develop "
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
  "beautifulsoup4",
  "sphinx >= 5.0,<7.0",
  "sphinx-basic-ng",
  "pygments >= 2.7",
]

license = { file = "LICENSE"}
authors = [
    {name = "charlie", email = "ai-charlie@outlook.com"},
]
classifiers = [
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.entry-points]
"sphinx.html_themes" = {pydata_sphinx_theme = "pydata_sphinx_theme"}

[project.urls]
GitHub = "https://github.com/ai-charlie/planet"
